--- a/popup.html
+++ b/popup.html
@@ -15,7 +15,7 @@
             width: 450px;
             min-height: 400px;
             font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+            background: linear-gradient(135deg, #1e3c72 0%, #2a5298 100%);
             color: #333;
             overflow: hidden;
         }
@@ -286,6 +286,9 @@
                 </div>
 
                 <!-- Action Buttons -->
+                <button id="open-sidebar-btn" class="continue-btn" style="background: #2a5298; margin-bottom: 10px;">
+                    🎯 Open Assistant Sidebar
+                </button>
                 <button id="go-to-linkedin-btn" class="continue-btn" style="margin-bottom: 10px;">
                     Go to LinkedIn
                 </button>
